versioned_docs/version-23.1/reference/rpk/rpk-redpanda/rpk-redpanda-admin-config-log-level-set.mdx
---
title: rpk redpanda admin config log-level set
rpk_version: v23.1.6 (rev cc47e1ad1)
---

<head>
  <meta name="title" content="rpk redpanda admin config log-level set | Redpanda Docs" />
  <meta name="description" content="rpk redpanda admin config log-level set" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-redpanda/rpk-redpanda-admin-config-log-level-set/" />
</head>

Set broker logger's log level.

This command temporarily changes a broker logger's log level. Each Redpanda
broker has many loggers, and each can be individually changed. Any change
to a logger persists for a limited amount of time, so as to ensure you do
not accidentally enable debug logging permanently.

It is optional to specify a logger; if you do not, this command will prompt
from the set of available loggers.

The special logger `all` enables all loggers. Alternatively, you can specify
many loggers at once. To see all possible loggers, run the following command:

```
redpanda --help-loggers
```

This command accepts loggers that it does not know of to ensure you can
independently update your redpanda installations from rpk. The success or
failure of enabling each logger is individually printed.

## Usage

```bash
rpk redpanda admin config log-level set [LOGGERS...] [flags]
```

## Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong>Value</strong>
      </td>
      <td>
        <strong>Type</strong>
      </td>
      <td>
        <strong>Description</strong>
      </td>
    </tr>
    <tr>
      <td>-e, --expiry-seconds</td>
      <td>int</td>
      <td>
        seconds to persist this log level override before redpanda reverts to
        its previous settings (if 0, persist until shutdown) (default 300).
      </td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td>Help for set.</td>
    </tr>
    <tr>
      <td>--host</td>
      <td>string</td>
      <td>
        Either a hostname or an index into `rpk.admin_api.addresses` config
        section to select the hosts to issue the request to.
      </td>
    </tr>
    <tr>
      <td>-l, --level</td>
      <td>string</td>
      <td>
        Log level to set (error, warn, info, debug, trace) (default "debug").
      </td>
    </tr>
    <tr>
      <td>--admin-api-tls-cert</td>
      <td>string</td>
      <td>
        The certificate to be used for TLS authentication with the Admin API.
      </td>
    </tr>
    <tr>
      <td>--admin-api-tls-enabled</td>
      <td>-</td>
      <td>
        Enable TLS for the Admin API (not necessary if specifying custom certs).
      </td>
    </tr>
    <tr>
      <td>--admin-api-tls-key</td>
      <td>string</td>
      <td>
        The certificate key to be used for TLS authentication with the Admin
        API.
      </td>
    </tr>
    <tr>
      <td>--admin-api-tls-truststore</td>
      <td>string</td>
      <td>
        The truststore to be used for TLS communication with the Admin API.
      </td>
    </tr>
    <tr>
      <td>--config</td>
      <td>string</td>
      <td>
        rpk config file, if not set the file will be searched for in the default
        locations.
      </td>
    </tr>
    <tr>
      <td>--hosts</td>
      <td>strings</td>
      <td>
        A comma-separated list of Admin API addresses (&lt;ip&gt;:&lt;port&gt; You must
        specify one for each node.
      </td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>
        Enable verbose logging (default <code>false</code>).
      </td>
    </tr>
  </tbody>
</table>
